--- a/demo/demo2.html
+++ b/demo/demo2.html
@@ -1,6 +1,6 @@
 <html ng-app="app">
 <script src="bower_components/angular/angular.js"></script>
-<script src="../angular-httphook.js"></script>
+<script src="bower_components/angular-httphook/angular-httphook.js"></script>
 <script>
 angular.module('app', ['httphook']).run(['$http', 'httphook', function($http, httphook) {
 
