Make tests to use local resource

--- a/demo/demo1.html
+++ b/demo/demo1.html
@@ -1,6 +1,6 @@
 <html ng-app="test">
 <script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/angular-httphook/angular-httphook.js"></script>
+<script src="../angular-httphook.js"></script>
 <script>
 angular.module('test', ['httphook']).run(['$http', 'httphook', function($http, httphook) {
 
