--- a/tests/test-full-sections-get.html
+++ b/tests/test-full-sections-get.html
@@ -1,8 +1,9 @@
 <html ng-app="app">
 <script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/tester/tester.js"></script>
 <script src="../angular-httphook.js"></script>
 <script>
-angular.module('app', ['httphook']).run(['$http', 'httphook', function($http, httphook) {
+angular.module('app', ['httphook']).run(['$http', 'httphook', '$q', function($http, httphook, $q) {
 
   httphook.get(/^\/api/, function(req, res) {
     res.data = [1];
@@ -28,9 +29,10 @@ angular.module('app', ['httphook']).run(['$http', 'httphook', function($http, ht
   });
 
   $http({ method: 'get', url: '/api' }).then(function(e) {
-    console.log('done', e.data);
-  }, function(e) {
-    console.log('fail', e.data); 
+    if(e.data.join('') !== '123456') return $q.reject();
+    Tester.feedback(true);
+  }).then(null, function(e) {
+    Tester.feedback(false);
   });
 
 }]);
