Add 'all methods' test

--- a/tests/test.html
+++ b/tests/test.html
@@ -2,7 +2,8 @@
 <script>
 Tester.run([
   'test-basic.html',
-  'test-full-sections-get.html'
+  'test-full-sections-get.html',
+  'test-all-methods.html'
 ]);
 </script>
 
