--- a/tests/test.html
+++ b/tests/test.html
@@ -3,7 +3,8 @@
 Tester.run([
   'test-basic.html',
   'test-full-sections-get.html',
-  'test-all-methods.html'
+  'test-all-methods.html',
+  'test-match-request.html'
 ]);
 </script>
 
